use java 8 collection stdlib methods