@@ -138,12 +138,12 @@ public class ScriptMethodInfoSerializingTests extends AbstractSerializingTestCas
 
     static Set<ScriptMethodInfo> mutateOneGetter(Set<ScriptMethodInfo> instances) {
         if (instances.size() == 0) {
-            return Set.of(randomInstance(NameType.GETTER));
+            return Collections.unmodifiableSet(Collections.singleton(randomInstance(NameType.GETTER)));
         }
         ArrayList<ScriptMethodInfo> mutated = new ArrayList<>(instances);
         int mutateIndex = randomIntBetween(0, instances.size() - 1);
         mutated.set(mutateIndex, mutate(mutated.get(mutateIndex)));
-        return Set.copyOf(mutated);
+        return Collections.unmodifiableSet(new HashSet<>(mutated));
     }
 
     static Set<ScriptMethodInfo> randomGetterInstances() {
