@@ -36,8 +36,8 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 
 public class ScriptContextInfoTests extends ESTestCase {
@@ -79,7 +79,10 @@ public class ScriptContextInfoTests extends ESTestCase {
             assertEquals(eparams.get(i).v2(), info.execute.parameters.get(i).name);
         }
         assertEquals(2, info.getters.size());
-        HashMap<String,String> getters = new HashMap(Map.of("getByte","byte", "getChar","char"));
+        HashMap<String,String> getters = new HashMap<String,String>() {{
+            put("getByte", "byte");
+            put("getChar", "char");
+        }};
         for (ScriptContextInfo.ScriptMethodInfo getter: info.getters) {
             assertEquals(0, getter.parameters.size());
             String returnType = getters.remove(getter.name);
@@ -120,7 +123,10 @@ public class ScriptContextInfoTests extends ESTestCase {
             assertEquals(eparams.get(i).v2(), info.execute.parameters.get(i).name);
         }
         assertEquals(2, info.getters.size());
-        HashMap<String,String> getters = new HashMap(Map.of("getCustom1",ct1, "getCustom2",ct2));
+        HashMap<String,String> getters = new HashMap<String,String>(){{
+            put("getCustom1",ct1);
+            put("getCustom2",ct2);
+        }};
         for (ScriptContextInfo.ScriptMethodInfo getter: info.getters) {
             assertEquals(0, getter.parameters.size());
             String returnType = getters.remove(getter.name);
@@ -129,7 +135,11 @@ public class ScriptContextInfoTests extends ESTestCase {
         }
         assertEquals(0, getters.size());
 
-        HashMap<String,String> methods = new HashMap(Map.of("getCustom1",ct1, "getCustom2",ct2, "execute",ct0));
+        HashMap<String,String> methods = new HashMap<String,String>(){{
+            put("getCustom1",ct1);
+            put("getCustom2",ct2);
+            put("execute",ct0);
+        }};
         for (ScriptContextInfo.ScriptMethodInfo method: info.methods()) {
             String returnType = methods.remove(method.name);
             assertNotNull(returnType);
@@ -210,7 +220,10 @@ public class ScriptContextInfoTests extends ESTestCase {
         Set<ScriptMethodInfo> getters =
             new ScriptContextInfo("getter_conditional", GetterConditional.class).getters;
         assertEquals(2, getters.size());
-        HashMap<String,String> methods = new HashMap(Map.of("getNonDefault1","boolean", "getNonDefault2","float"));
+        HashMap<String,String> methods = new HashMap<String,String>(){{
+            put("getNonDefault1","boolean");
+            put("getNonDefault2","float");
+        }};
         for (ScriptContextInfo.ScriptMethodInfo method: getters) {
             String returnType = methods.remove(method.name);
             assertNotNull(returnType);
@@ -301,28 +314,28 @@ public class ScriptContextInfoTests extends ESTestCase {
             new ScriptMethodInfo(
                 "execute",
                 "double",
-                List.of(
+                Collections.unmodifiableList(Arrays.asList(
                     new ParameterInfo("double", "weight"),
                     new ParameterInfo("org.elasticsearch.index.similarity.ScriptedSimilarity$Query", "query"),
                     new ParameterInfo("org.elasticsearch.index.similarity.ScriptedSimilarity$Field", "field"),
                     new ParameterInfo("org.elasticsearch.index.similarity.ScriptedSimilarity$Term", "term"),
                     new ParameterInfo("org.elasticsearch.index.similarity.ScriptedSimilarity$Doc", "doc")
                 )
-            ),
-            Set.of(
+            )),
+            Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
                 new ScriptMethodInfo("getParams", "java.util.Map", new ArrayList<>()),
                 new ScriptMethodInfo("getDoc", "java.util.Map", new ArrayList<>()),
                 new ScriptMethodInfo("get_score", "double", new ArrayList<>())
-            )
+            )))
         );
         assertEquals(expected, parsed);
     }
 
     public void testIgnoreOtherMethodsInListConstructor() {
-        ScriptContextInfo constructed = new ScriptContextInfo("otherNames", List.of(
+        ScriptContextInfo constructed = new ScriptContextInfo("otherNames", Collections.unmodifiableList(Arrays.asList(
             new ScriptMethodInfo("execute", "double", Collections.emptyList()),
             new ScriptMethodInfo("otherName", "bool", Collections.emptyList())
-        ));
+        )));
         ScriptContextInfo expected = new ScriptContextInfo("otherNames",
             new ScriptMethodInfo("execute", "double", Collections.emptyList()),
             Collections.emptySet()
@@ -332,20 +345,20 @@ public class ScriptContextInfoTests extends ESTestCase {
 
     public void testNoExecuteInListConstructor() {
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("noExecute", List.of(
+            new ScriptContextInfo("noExecute", Collections.unmodifiableList(Arrays.asList(
                 new ScriptMethodInfo("getSomeOther", "int", Collections.emptyList()),
                 new ScriptMethodInfo("getSome", "bool", Collections.emptyList())
-            )));
+            ))));
         assertEquals("Could not find required method [execute] in [noExecute], found [getSome, getSomeOther]", e.getMessage());
     }
 
     public void testMultipleExecuteInListConstructor() {
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new ScriptContextInfo("multiexecute", List.of(
+            new ScriptContextInfo("multiexecute", Collections.unmodifiableList(Arrays.asList(
                 new ScriptMethodInfo("execute", "double", Collections.emptyList()),
-                new ScriptMethodInfo("execute", "double", List.of(
+                new ScriptMethodInfo("execute", "double", Collections.unmodifiableList(Arrays.asList(
                     new ParameterInfo("double", "weight")
-            )))));
+            )))))));
         assertEquals("Cannot have multiple [execute] methods in [multiexecute], found [2]", e.getMessage());
     }
 }
